# krx-api-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SPEC.md  STATE.md  install.sh
.github/workflows/: prebuilt.yml
data/: krx_api_manifest.json
docs/: CLI_REFERENCE.md  LLM_GUIDE.md
krx_docs/: Spec.docx  service_catalog.json
krx_docs/specs/: bnd_bydd_trd.docx  bon_dd_trd.docx  drvprod_dd_trd.docx  elw_bydd_trd.docx  eqkfu_ksq_bydd_trd.docx  eqkop_bydd_trd.docx  eqsfu_stk_bydd_trd.docx  eqsop_bydd_trd.docx  esg_etp_info.docx  esg_index_info.docx  etf_bydd_trd.docx  etn_bydd_trd.docx  ets_bydd_trd.docx  fut_bydd_trd.docx  gold_bydd_trd.docx  knx_bydd_trd.docx  knx_isu_base_info.docx  kosdaq_dd_trd.docx  kospi_dd_trd.docx  krx_dd_trd.docx  ksq_bydd_trd.docx  ksq_isu_base_info.docx  kts_bydd_trd.docx  oil_bydd_trd.docx  opt_bydd_trd.docx  smb_bydd_trd.docx  sr_bydd_trd.docx  sri_bond_info.docx  stk_bydd_trd.docx  stk_isu_base_info.docx  sw_bydd_trd.docx
src/: api.rs  cli.rs  config.rs  errors.rs  main.rs  manifest.rs
tools/: generate_manifest.py  render_cli_reference.py  sync_krx_specs.py
